cabal-version:      2.4
name:               unxloud 
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Fowler
maintainer:         kisonecat@gmail.com 

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable unxloud 
  ghc-options: -Wall
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  other-modules:       Configuration
                     , App
                     , AppM
                     , GitHub
                     , Repos
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.14.3.0 
                     , aeson
                     , hedis
                     , string-conversions
                     , bytestring
                     , resource-pool
                     , either
                     , containers
                     , http-api-data
                     , http-types
                     , http-conduit
                     , http-client
                     , lens
                     , monad-logger
                     , mtl
                     , servant
                     , servant-server
                     , wai-logger
                     , network-uri
                     , dotenv
                     , stm
                     , hedis
                     , text
                     , transformers
                     , wai
                     , warp

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite unxloud-test 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
